--- a/style.css
+++ b/style.css
@@ -3,3 +3,24 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  background-color: #1e1e1e;
+  height: 2000px;
+}
+
+header {
+  background-color: #2c2c2c;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  display: flex;
+  gap: 20px;
+  padding: 40px 17.75px;
+
+  div.logos {
+  }
+  div.texts {
+  }
+}
